# financial_analyzer

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/financial_analyzer/: __init__.py
tests/: test_financial_analyzer.py
