[tool.poetry]
name = "financial_analyzer"
version = "0.1.0"
description = "Calculate basic metrics of sales data and visualize the results."
authors = ["Nicole Tu, Rafe Chang, Alan PowPowichrowski, Chris Gao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
